--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "exports": "./index.js",
- "type": "module",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -14,6 +14,7 @@
     "commander": "^11.0.0",
     "dotenv": "^16.3.1",
     "inquirer": "^9.2.11",
+    "mongodb": "^6.1.0",
     "mongoose": "^7.6.0",
     "nanoid": "^5.0.1",
     "ora": "^7.0.1"
